--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    
     "bootstrap-vue": "^2.0.0-rc.11",
+    "mdbvue": "^5.1.0",
     "vue": "^2.5.22",
+    "axios": "^0.18.0",
     "vue-axios": "^2.1.4",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-resource": "^1.5.1",
